<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PASSWORDS.NewPassword"
    android:id="@+id/relativeLayout">

    <EditText
        android:id="@+id/passwordLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@null"
        android:hint="@string/enter_password_label"
        android:padding="10dp">
    </EditText>

    <EditText
        android:id="@+id/passwordText"
        android:layout_below="@id/passwordLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@null"
        android:hint="@string/enter_password">
    </EditText>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordText"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:elevation="10dp"
        android:text="@string/save_password">

    </Button>





</RelativeLayout>