<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SIGNUP.LoginScreen"
    android:id="@+id/loginLayout"
    android:background="@color/background_color">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:src="@drawable/password"
            android:id="@+id/appIcon"
            android:layout_marginBottom="@dimen/_40sdp"
            android:layout_centerHorizontal="true"
            >
        </androidx.constraintlayout.utils.widget.ImageFilterView>




        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_below="@id/appIcon"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_25sdp"
            android:layout_marginStart="20dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/continueAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_sign_in_to_continue"
            android:layout_below="@id/login"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_12sdp">
        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_name"
            android:background="@null"
            android:backgroundTint="@color/background_color"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="10dp"
            android:textSize="@dimen/_14sdp"
            android:id="@+id/loginName"
            android:layout_below="@id/continueAccount"
            android:layout_marginTop="30dp">
        </com.google.android.material.textfield.TextInputEditText>

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email_id"
            android:backgroundTint="@color/background_color"
            android:background="@null"
            android:layout_below="@id/loginName"
            android:id="@+id/loginEmail"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="10dp"
            android:textSize="@dimen/_14sdp">
        </com.google.android.material.textfield.TextInputEditText>



        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginEmail"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:text="@string/BtnLogin"
            android:backgroundTint="#1E88E5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account_sign_up"
            android:layout_below="@id/loginButton"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:id="@+id/noAccount"
            android:textColor="@color/text_color">
        </com.google.android.material.textview.MaterialTextView>

    </RelativeLayout>





</androidx.constraintlayout.widget.ConstraintLayout>