<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".USER.UserAccount"
    android:id="@+id/userDataLayout">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cipherkeep"
        android:textSize="@dimen/text_size"
        android:textColor="@color/text_color"
        android:textStyle="bold|italic"
        android:padding="10dp"
        android:layout_margin="10dp">

    </com.google.android.material.textview.MaterialTextView>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:layout_below="@id/appName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_name"
            android:textSize="15sp">
        </com.google.android.material.textfield.TextInputEditText>


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userEmailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:layout_below="@id/userNameLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userEmailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/enter_your_email"
            android:textSize="15sp">
        </com.google.android.material.textfield.TextInputEditText>


    </com.google.android.material.textfield.TextInputLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userEmailLayout"
        android:layout_marginTop="30dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/updateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:elevation="10dp"
            android:shadowColor="?attr/colorError"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="5"
            android:text="@string/update_my_data"
            android:translationZ="4dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp">
        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:elevation="10dp"
            android:shadowColor="?attr/colorError"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="5"
            android:text="@string/delete_my_data"
            android:translationZ="4dp"
            android:layout_below="@id/updateButton"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp">
        </com.google.android.material.button.MaterialButton>

    </RelativeLayout>







</RelativeLayout>