<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SIGNUP.MainActivity"
    android:background="@color/background_color"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/signupLayout">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:src="@drawable/password"
            android:id="@+id/signupAppIcon"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_40sdp"
            >
        </androidx.constraintlayout.utils.widget.ImageFilterView>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_sign_up"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_below="@id/signupAppIcon"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_25sdp"
            android:id="@+id/signUpTitle"
            android:layout_marginStart="20dp">
        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_sign_up_to_continue"
            android:layout_below="@id/signUpTitle"
            android:id="@+id/signupText"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_12sdp">
        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameLayout"
            android:layout_below="@id/signupText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:boxStrokeWidth="0dp"
            android:layout_marginTop="30dp"
            app:boxStrokeWidthFocused="0dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_name"
                android:textSize="@dimen/_14sdp"
                android:background="@color/background_color">
            </com.google.android.material.textfield.TextInputEditText>


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            android:layout_below="@id/nameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_color"
                android:hint="@string/enter_your_email"
                android:textSize="@dimen/_14sdp">
            </com.google.android.material.textfield.TextInputEditText>


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpButton"
            android:layout_below="@id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
           android:layout_margin="@dimen/_30sdp"
            android:elevation="10dp"
            android:shadowColor="?attr/colorError"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="5"
            android:backgroundTint="#1E88E5"
            android:text="@string/sign_up"
            android:translationZ="4dp">
        </com.google.android.material.button.MaterialButton>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/alreadyAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/signUpButton"
            android:layout_centerHorizontal="true"
            android:textColor="@color/text_color"
            android:text="@string/already_have_an_account_log_in">
        </com.google.android.material.textview.MaterialTextView>


    </RelativeLayout>








</androidx.constraintlayout.widget.ConstraintLayout>